<resources>
    <string name="app_name">PoojaSamagri</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="please_enter_login_details">Please Enter Login Details</string>
    <string name="login">Login</string>
    <string name="pooja_samagari">Pooja Samagari</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="profile">My Profile</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_products">Search Products</string>
    <string name="products">Products</string>
    <string name="view_all">View All</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="category">Category</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="favourite">Favourite</string>
    <string name="orders">Orders</string>
    <string name="current">Current</string>
    <string name="completed">Completed</string>
    <string name="my_orders">My orders</string>
    <string name="update">Update</string>
    <string name="order_summary">Order Summary</string>
    <string name="about_us_description">Welcome to &lt;b>SHUBH LABH POOJA SAMAGRI&lt;/b>, your one stop solution for all your Religious goods, Festive and Marriage Function needs. We specialize in providing a wide range of items that are essential for religious ceremonies,rituals and traditional wedding celebrations.  At our store , we take pride in offering High-Quality Products that cater to your spiritual and cultural requirements.&lt;br/>
&lt;b>Religious Items:&lt;/b>

&lt;br/>
 We understand the significance of religious practices in your life. That\'s why we offer a diverse selection of religious items to enhance your spiritual journey. Whether you are performing daily prayers, Conducting Poojas, or seeking divine blessings, our store has statues, pictures and paintings of various deities from Different traditions. Additionally we offer pooja accessories such as incense sticks, camphor, Brass Items, Lamps, Prayer beads and holy books, ensuring you have all the essentials to create a sacred atmosphere.&lt;br/>

&lt;b>Personalized Services:-&lt;/b>
&lt;br/>
At SHUBH LABH POOJA SAMAGRI, we strive to offer personalized services to meet your specific requirements. Our knowledgeable staff is always available to assist you in finding the perfect items for your religious practices or wedding celebrations. Whether you need guidance in selecting the right deity idol or advice on wedding traditions, we are here to help you make informed choices.
&lt;br/>
&lt;b>Quality Assurance:&lt;/b>&lt;br/>

We understand the importance of authenticity and quality when it comes to religious Items, Brass Items and marriage function items. That\'s why we source our products from reputable manufacturers and artisans who specialize in crafting traditional and authentic items. We ensure that our merchandise meets the highest standards of craftsmanship and durability, allowing you to cherish them for years to come.
&lt;br/>
&lt;b>Convenience and Accessibility&lt;/b>&lt;br/>

SHUBH LABH POOJA SAMAGRI is committed to providing a hassle-free shopping experience. Our store is conveniently located, and we also offer online shopping options, allowing to order from our Application and purchase our products from the comfort of your home. With secure payment options and reliable shipping services, we strive to make your shopping experience seamless and convenient.
&lt;br/>
At SHUBH LABH POOJA SAMAGRI, we understand the significance of religious and marriage functions in your life. Our mission is to provide you with the finest quality items that enable you to express your devotion and celebrate your special moments with joy and reverence. Visit us today and explore our wide range of religious and marriage function supplies to find everything you need for your spiritual and cultural needs.
</string>
</resources>