<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight="percent"
        app:layout_constraintHeight_percent=".3">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/lamp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="5dp"
            android:id="@+id/heading_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pooja_samagari"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="24dp"
        android:layout_marginBottom="-24dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textColor="@color/mainText"
            app:layout_constraintTop_toTopOf="parent"
            />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="5dp"
                android:id="@+id/label_txt"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_login_details"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/welcome_txt"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:id="@+id/name_layout"
                app:layout_constraintTop_toBottomOf="@id/label_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_person"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:id="@+id/name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_phone"
                android:layout_marginTop="20dp"
                android:id="@+id/mobile_layout"
                app:layout_constraintTop_toBottomOf="@id/name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:digits="0123456789"
                    android:maxLength="10"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:id="@+id/mobile_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            app:cornerRadius="24dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </com.google.android.material.card.MaterialCardView>
    
    
    





</androidx.constraintlayout.widget.ConstraintLayout>