<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_centerInParent="true"
    tools:context=".ui.OTPVerificationScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/otp_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/otp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
   />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/otp_verification_txt"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textColor="@color/mainText"
        app:layout_constraintTop_toBottomOf="@id/otp_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <com.ozcanalasalvar.otp_view.view.OtpView
        android:layout_marginTop="30dp"
        android:id="@+id/otpview"
        app:layout_constraintTop_toBottomOf="@id/otp_verification_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:activeColor="@color/primary"
        app:autoFocusEnabled="false"
        app:digits="6"
        app:passiveColor="@color/white"
        app:textColor="@color/mainText"
        app:textSize="22"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_marginHorizontal="20dp"
        android:id="@+id/verify_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cornerRadius="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/otpview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/verify"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/verify_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        >

    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/otp_receive_txt"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/didn_t_receive_an_otp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/verify_btn"
        app:layout_constraintLeft_toRightOf="@id/otp_receive_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:text="@string/resend_otp"/>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>