<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FavouriteFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header_layout">



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginVertical="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categories_txt"
            android:text="@string/my_orders"
            android:fontFamily="@font/metropolis_semibold"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:tint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/categories_txt"
            app:layout_constraintBottom_toBottomOf="@id/categories_txt"/>
        
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorHeight="2dp"
            app:tabTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/categories_txt">
            
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:background="@color/white"
                />


            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:background="@color/white"

                />
            
            
        </com.google.android.material.tabs.TabLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="10dp"
        android:id="@+id/loginDetailsCardView"
        app:cardCornerRadius="24dp"
        android:layout_marginBottom="-24dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            tools:layout_editor_absoluteX="8dp" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
