<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header_layout">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_layout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginHorizontal="10dp"
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome, Himanshu"
                android:fontFamily="@font/nunitosans_black"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Location"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_txt"
                />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/ic_favorite"
                android:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        Search layout-->


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_view"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_search"
            android:background="@drawable/edit_text_rounded_corner"
            app:layout_constraintTop_toBottomOf="@id/profile_layout"
            android:hint="@string/search_products"
            android:textColorHint="@color/textAd"
            android:gravity="center_vertical"
            android:clickable="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/search_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginDetailsCardView"
        app:cardCornerRadius="24dp"
        android:layout_marginBottom="-24dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout">

        <ScrollView
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginBottom="10dp"
                    android:id="@+id/category_txt_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <androidx.appcompat.widget.AppCompatTextView
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/category_txt"
                        android:text="@string/category"
                        android:fontFamily="@font/nunitosans_black"
                        android:textColor="@color/mainText"
                        android:textSize="20sp"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/view_all_category_txt"
                        android:text="@string/view_all"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/categoryRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/category_txt_layout"
                    />


                <!--        Ad banner layout-->
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/adBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/categoryRecycler"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/product_txt_layout"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/adBanner">


                    <androidx.appcompat.widget.AppCompatTextView
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/product_txt"
                        android:text="@string/products"
                        android:fontFamily="@font/nunitosans_black"
                        android:textColor="@color/mainText"
                        android:textSize="20sp"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/view_all_product_txt"
                        android:text="@string/view_all"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/product_recyclerView"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/product_txt_layout"/>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>







